tests/compile_fail/quantity_definition_with_numeric_factor.stderr
error: Only 1 and 1.0 are valid factors in quantity definitions.
  --> tests/compile_fail/quantity_definition_with_numeric_factor.rs:17:22
   |
17 |         def Length = 2.0 / Dimensionless,
   |                      ^^^
